--- a/src/css/home/introducao.css
+++ b/src/css/home/introducao.css
@@ -1,18 +1,12 @@
 .introducao-bg {
   background: var(--cor-12);
-  box-shadow: inset 0 -120px var(-cor-0);
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  max-width: 1200px;
-  box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .introducao-conteudo {
@@ -21,9 +15,9 @@
 }
 
 .introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
-  margin-bottom: -120px;
   border-radius: 4px;
 }
 
@@ -39,17 +33,15 @@
   .introducao-bg {
     background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px var(-cor-0);
+    box-shadow: inset 0 -60px #ffffff;
   }
   .introducao {
     grid-template-columns: 1fr;
     gap: 32px;
   }
-
   .introducao-conteudo {
     padding-bottom: 0px;
   }
-
   .introducao h1 {
     margin-bottom: 16px;
   }
