--- a/src/css/global/global.css
+++ b/src/css/global/global.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 600px;
+
   color: #111;
 }
 
@@ -10,7 +10,8 @@ h2,
 h3,
 h4,
 ul,
-p {
+p,
+blockquote {
   margin: 0px;
 }
 
