--- a/src/css/utilidades/componentes.css
+++ b/src/css/utilidades/componentes.css
@@ -11,14 +11,12 @@
   display: inline-block;
   padding: 16px 32px;
   background: linear-gradient(#ffbf00, #f2a50c);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
-  font: 600 1.125rem/1.35 "Poppins", sans-serif;
   color: var(--cor-p5);
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
-  border: none;
-  cursor: pointer;
 }
 
 .botao:hover {
@@ -45,7 +43,7 @@
   width: 18px;
   height: 10px;
   margin-left: 12px;
-  background: url("../../img/icones/seta.svg");
+  background: url("../../../public/img/icones/seta.svg");
   transition: transform 0.2s;
 }
 
@@ -62,11 +60,9 @@
 
 .link {
   display: inline-block;
-  font: 500 1.5rem/1.5 "Poppins", sans-serif;
   color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
   text-transform: uppercase;
-  position: relative;
-  padding-bottom: 8px;
 }
 
 .link::after {
@@ -74,22 +70,18 @@
   display: block;
   width: 100%;
   height: 4px;
-  background: currentColor;
-  position: absolute;
-  margin-top: 4px;
+  background-color: currentColor;
 }
 
 .link:hover {
   color: var(--cor-0);
 }
 
-.titulo {
-  padding: 60px 0;
-  background: var(--cor-11);
-}
-
-.titulo div {
-  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
+/* titulo internas */
+.titulo-bg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
 }
 
 .titulo p {
@@ -97,12 +89,13 @@
 }
 
 @media (max-width: 800px) {
+  .titulo-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
   .titulo p {
     font-size: 1rem;
     text-transform: lowercase;
     font-weight: 400;
-  }
-  .titulo {
-    padding: 40px 0;
   }
 }
