--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 
 /* UTILIDADES */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* HOME */
 @import "./home/introducao.css";
@@ -18,10 +19,18 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+/* BICICLETA */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 /* SEGUROS */
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+
+/* CONTATO */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 
 /* TERMOS */
 @import "./termos/termos.css";
