chora:folder organization

--- a/src/css/seguros/seguros.css
+++ b/src/css/seguros/seguros.css
@@ -58,7 +58,7 @@
   left: -21px;
   width: 13px;
   height: 9px;
-  background-image: url("../../../public/img/icones/lista.svg");
+  background-image: url("../.././img/icones/lista.svg");
 }
 
 .seguros-item a {
