--- a/src/css/utilidades/componentes.css
+++ b/src/css/utilidades/componentes.css
@@ -45,7 +45,7 @@
   width: 18px;
   height: 10px;
   margin-left: 12px;
-  background: url("../../../public/img/icones/seta.svg");
+  background: url("../.././img/icones/seta.svg");
   transition: transform 0.2s;
 }
 
@@ -87,8 +87,7 @@
 }
 
 .titulo {
-  background: url("../../../public/img/dec/top-right.svg") no-repeat top right
-    20px;
+  background: url("../.././img/dec/top-right.svg") no-repeat top right 20px;
 }
 
 .titulo p {
