--- a/src/css/contato/contato.css
+++ b/src/css/contato/contato.css
@@ -16,14 +16,14 @@
 .contato-dados {
   border-radius: 5px 0 0 5px;
 
-  background: var(--cor-12) url("../../../public/img/dec/bottom-left.svg")
-    no-repeat bottom 20px left 20px;
+  background: var(--cor-12) url("../.././img/dec/bottom-left.svg") no-repeat
+    bottom 20px left 20px;
 }
 
 .contato-formulario {
   border-radius: 0 5px 5px 0;
-  background: var(--cor-0) url("../../../public/img/dec/bottom-right.svg")
-    no-repeat bottom 20px right 20px;
+  background: var(--cor-0) url("../.././img/dec/bottom-right.svg") no-repeat
+    bottom 20px right 20px;
 }
 
 .contato-dados h2 {
@@ -33,7 +33,7 @@
 .contato-endereco {
   margin-bottom: 32px;
   padding-left: 28px;
-  background: url(../../../public/img/icones/local.svg) no-repeat 0px 2px;
+  background: url(../.././img/icones/local.svg) no-repeat 0px 2px;
 }
 
 .contato-endereco p {
@@ -52,14 +52,14 @@
 }
 
 .contato-meios a:first-child {
-  background: url(../../../public/img/icones/email.svg) no-repeat 0px 2px;
+  background: url(../.././img/icones/email.svg) no-repeat 0px 2px;
 }
 
 .contato-meios a:nth-child(2) {
   margin-bottom: 32px;
 }
 .contato-meios a:nth-child(3) {
-  background: url(../../../public/img/icones/telefone.svg) no-repeat 0px 2px;
+  background: url(../.././img/icones/telefone.svg) no-repeat 0px 2px;
   margin-bottom: 60px;
 }
 
