--- a/src/css/seguros/perguntas.css
+++ b/src/css/seguros/perguntas.css
@@ -41,7 +41,7 @@
   display: inline-block;
   width: 14px;
   height: 6px;
-  background: url("../../../public/img/icones/seta-abrir.svg");
+  background: url("../.././img/icones/seta-abrir.svg");
   transition: 0.3s;
 }
 
